@@ -98,8 +98,8 @@ public class ClassLoaderUtils {
                 // If the path is already a URL, just add it (but don't check if it exists, too expensive and subject to network availability)
                 boolean isUrl = true;
                 try {
-                    additionalClasspath.add(new URL(modulePathString));
-                } catch (MalformedURLException mue) {
+                    additionalClasspath.add(URI.create(modulePathString).toURL());
+                } catch (IllegalArgumentException | MalformedURLException e) {
                     isUrl = false;
                 }
                 if (!isUrl) {
